- 상단바 다시 fixed 로 원복 - toc 이용하여 페이지 내 헤더로 이동 시, 상단 fix 겹쳐 보이는 버그 수정 (관련 내용: https://stackoverflow.com/questions/4086107/fixed-page-header-overlaps-in-page-anchors)

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -126,7 +126,7 @@ body {
     line-height: 1.35em;
     margin: 0;
     text-rendering: optimizeLegibility;
-    padding-top:0px !important;
+    padding-top:45px;
     overflow-x:hidden;
     overflow-y:scroll;
 }
