--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,7 +31,7 @@ p {
 
 h2 {
   margin-bottom: 0 !important;
-  padding: 45px 0 0 0 !important;
+  margin-top: 60px !important;
   font-weight: bold !important;
   font-size: 28px !important;
 }
@@ -162,6 +162,7 @@ figure {
   margin-top:80px;
 }
 
+/* TOC 관련 css */
 .toc {
   position: absolute;
   top: 240px;
@@ -215,4 +216,13 @@ figure {
   a:hover {
     color:var(--default-toc-theme-color) !important;
   }
+}
+
+h2:target::before, h3:target::before {
+  content: "";
+  display: block;
+  height: 100px; /* fixed header height*/
+  margin-top: -100px; /* negative fixed header height */
+  visibility: hidden;
+  pointer-events: none;
 }
